<resources>
    <string name="app_name">PlayerMusic</string>
    <string name="etUsuario">Usuario</string>
    <string name="etSenha">Password</string>
    <string name="btAcessar">Acessar</string>
    <string name="btCadastrar">Cadastrar</string>
    <string name="etNome">Digite seu nome</string>
    <string name="etEmail">Digite seu e-mail</string>
    <string name="btCancelar">Cancelar</string>
    <string name="tvFavoritos">Música(s) favorita(s): 0</string>
</resources>
